experiments/eight_schools/original/run_134557904908/experiments/model_comparison/analysis_log.txt
  File "/workspace/experiments/model_comparison/code/comprehensive_comparison.py", line 25
    MODEL1_PATH = "/workspace/experiments/model_comparison/idata1_with_predictions.netcdf"'
                                                                                          ^
SyntaxError: unterminated string literal (detected at line 25)
